--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,17 +1,17 @@
-name: RDP
+name: Cloud Gaming RDP
 
 on:
   workflow_dispatch:
 
 jobs:
-  secure-rdp:
+  cloud-gaming:
     runs-on: windows-2022
     timeout-minutes: 3600
 
     steps:
       - name: Configure Core RDP Settings
         run: |
-          # Enable Remote Desktop and disable Network Level Authentication (if needed)
+          # Enable Remote Desktop and disable Network Level Authentication
           Set-ItemProperty -Path 'HKLM:\System\CurrentControlSet\Control\Terminal Server' `
                              -Name "fDenyTSConnections" -Value 0 -Force
           Set-ItemProperty -Path 'HKLM:\System\CurrentControlSet\Control\Terminal Server\WinStations\RDP-Tcp' `
@@ -19,28 +19,25 @@ jobs:
           Set-ItemProperty -Path 'HKLM:\System\CurrentControlSet\Control\Terminal Server\WinStations\RDP-Tcp' `
                              -Name "SecurityLayer" -Value 0 -Force
 
-          # Remove any existing rule with the same name to avoid duplication
+          # Enable graphics acceleration for RDP
+          Set-ItemProperty -Path 'HKLM:\SOFTWARE\Microsoft\Windows NT\CurrentVersion\Terminal Server\TSAppCompat' `
+                             -Name "fEnableHardwareAcceleration" -Value 1 -Force
+
+          # Firewall for RDP
           netsh advfirewall firewall delete rule name="RDP-Tailscale"
+          netsh advfirewall firewall add rule name="RDP-Tailscale" dir=in action=allow protocol=TCP localport=3389
 
-          # Allow incoming connection on port 3389
-          netsh advfirewall firewall add rule name="RDP-Tailscale" `
-            dir=in action=allow protocol=TCP localport=3389
-
-          # Restart Remote Desktop service to apply changes
           Restart-Service -Name TermService -Force
 
       - name: Create RDP User with Fixed Password
         run: |
           $username = "RDP"
-          $passwordPlain = "882188Adriel"
-
-          # Create secure string and user (if doesn't exist)
+          $passwordPlain = "882188Adr"
           $securePass = ConvertTo-SecureString $passwordPlain -AsPlainText -Force
 
           if (-not (Get-LocalUser -Name $username -ErrorAction SilentlyContinue)) {
               New-LocalUser -Name $username -Password $securePass -AccountNeverExpires -PasswordNeverExpires
           } else {
-              Write-Host "User $username already exists. Updating password."
               $user = Get-LocalUser -Name $username
               $user | Set-LocalUser -Password $securePass
           }
@@ -48,16 +45,8 @@ jobs:
           Add-LocalGroupMember -Group "Administrators" -Member $username -ErrorAction SilentlyContinue
           Add-LocalGroupMember -Group "Remote Desktop Users" -Member $username -ErrorAction SilentlyContinue
 
-          # Export credentials and info to GitHub environment
           echo "RDP_USER=$username" >> $env:GITHUB_ENV
           echo "RDP_PASSWORD=$passwordPlain" >> $env:GITHUB_ENV
-
-          if (-not (Get-LocalUser -Name $username)) {
-              Write-Error "User creation failed"
-              exit 1
-          } else {
-              Write-Host "User $username created or updated successfully."
-          }
 
       - name: Install Tailscale
         run: |
@@ -70,8 +59,6 @@ jobs:
       - name: Establish Tailscale Connection
         run: |
           & "$env:ProgramFiles\Tailscale\tailscale.exe" up --authkey=${{ secrets.TAILSCALE_AUTH_KEY }} --hostname=gh-runner-$env:GITHUB_RUN_ID
-
-          # Wait for Tailscale to assign an IP
           $tsIP = $null
           $retries = 0
           while (-not $tsIP -and $retries -lt 10) {
@@ -79,24 +66,82 @@ jobs:
               Start-Sleep -Seconds 5
               $retries++
           }
-
-          if (-not $tsIP) {
-              Write-Error "Tailscale IP not assigned. Exiting."
-              exit 1
-          }
+          if (-not $tsIP) { Write-Error "Tailscale IP not assigned"; exit 1 }
           echo "TAILSCALE_IP=$tsIP" >> $env:GITHUB_ENV
 
       - name: Verify RDP Accessibility
         run: |
           Write-Host "Tailscale IP: $env:TAILSCALE_IP"
-
-          # Test connectivity using Test-NetConnection against the Tailscale IP on port 3389
           $testResult = Test-NetConnection -ComputerName $env:TAILSCALE_IP -Port 3389
-          if (-not $testResult.TcpTestSucceeded) {
-              Write-Error "TCP connection to RDP port 3389 failed"
-              exit 1
+          if (-not $testResult.TcpTestSucceeded) { Write-Error "TCP connection failed"; exit 1 }
+
+      - name: Install Discord
+        run: |
+          $url = "https://discord.com/api/download?platform=win"
+          $installer = "$env:TEMP\DiscordSetup.exe"
+          Invoke-WebRequest -Uri $url -OutFile $installer
+          Start-Process -FilePath $installer -ArgumentList "/S" -Wait
+          Remove-Item $installer -Force
+
+      - name: Install Chrome
+        run: |
+          $url = "https://dl.google.com/chrome/install/latest/chrome_installer.exe"
+          $installer = "$env:TEMP\ChromeSetup.exe"
+          Invoke-WebRequest -Uri $url -OutFile $installer
+          Start-Process -FilePath $installer -ArgumentList "/silent /install" -Wait
+          Remove-Item $installer -Force
+
+      - name: Install 7-Zip
+        run: |
+          $url = "https://www.7-zip.org/a/7z2301-x64.exe"
+          $installer = "$env:TEMP\7zip.exe"
+          Invoke-WebRequest -Uri $url -OutFile $installer
+          Start-Process -FilePath $installer -ArgumentList "/S" -Wait
+          Remove-Item $installer -Force
+
+      - name: Install DirectX End-User Runtime
+        run: |
+          $dxUrl = "https://download.microsoft.com/download/1/1/C/11C0E6C2-2904-4C57-8DAD-94F758DC6D3F/directx_Jun2010_redist.exe"
+          $installer = "$env:TEMP\dx_redist.exe"
+          Invoke-WebRequest -Uri $dxUrl -OutFile $installer
+          Start-Process -FilePath $installer -ArgumentList "/Q /T:$env:TEMP\DXSetup" -Wait
+          Start-Process -FilePath "$env:TEMP\DXSetup/DXSETUP.exe" -ArgumentList "/silent" -Wait
+          Remove-Item $installer -Force
+          Remove-Item "$env:TEMP\DXSetup" -Recurse -Force
+
+      - name: Install Vulkan Runtime
+        run: |
+          $url = "https://vulkan.lunarg.com/sdk/home"
+          Write-Host "Vulkan runtime precisa ser baixado manualmente via link oficial se necessÃ¡rio."
+
+      - name: Install Visual C++ Redistributables
+        run: |
+          $urls = @(
+            "https://aka.ms/vs/17/release/vc_redist.x64.exe",
+            "https://aka.ms/vs/17/release/vc_redist.x86.exe"
+          )
+          foreach ($url in $urls) {
+              $installer = "$env:TEMP\vc_redist.exe"
+              Invoke-WebRequest -Uri $url -OutFile $installer
+              Start-Process -FilePath $installer -ArgumentList "/install /quiet /norestart" -Wait
+              Remove-Item $installer -Force
           }
-          Write-Host "TCP connectivity successful!"
+
+      - name: Install Steam
+        run: |
+          $url = "https://cdn.cloudflare.steamstatic.com/client/installer/SteamSetup.exe"
+          $installer = "$env:TEMP\SteamSetup.exe"
+          Invoke-WebRequest -Uri $url -OutFile $installer
+          Start-Process -FilePath $installer -ArgumentList "/S" -Wait
+          Remove-Item $installer -Force
+
+      - name: Install Epic Games Launcher
+        run: |
+          $url = "https://launcher-public-service-prod06.ol.epicgames.com/launcher/api/installer/download/EpicGamesLauncherInstaller.msi"
+          $installer = "$env:TEMP\EpicInstaller.msi"
+          Invoke-WebRequest -Uri $url -OutFile $installer
+          Start-Process msiexec.exe -ArgumentList "/i", "`"$installer`"", "/quiet", "/norestart" -Wait
+          Remove-Item $installer -Force
 
       - name: Maintain Connection
         run: |
@@ -105,9 +150,4 @@ jobs:
           Write-Host "Username: $env:RDP_USER"
           Write-Host "Password: $env:RDP_PASSWORD"
           Write-Host "==================`n"
-
-          # Keep runner active until cancelled
-          while ($true) {
-              Write-Host "[$(Get-Date)] RDP Active - Use Ctrl+C in workflow to terminate"
-              Start-Sleep -Seconds 300
-          }
+          while ($true) { Start-Sleep -Seconds 300 }
